# workshop_from_sql_to_deploy

./: .gitignore  Dockerfile  database.py  pyproject.toml
