[tool.poetry]
name = "sql-workshop2"
version = "0.1.0"
description = "SQL com postgres no Docker + PGAdmin"
authors = ["PedroPauloMR <pedrop.ribeiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
